[workspace.package]
version = "1.4.0"
authors = ["Stefan Tammer <st.tammer@gmail.com>"]
edition = "2024"
license = "MIT"

[workspace]
members = ["rel_path"]


[package]
name = "platform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version = "1.88"

[lib]
name = "platform"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(web_sys_unstable_apis)'] }


[features]
timeout = []
async_timeout = []
frame_pacing = []
futures = ["rapidhash"]
device_events = []
auto_wake_lock = ["wake_lock"]
wake_lock = ["dep:nosleep", "web-sys/Navigator", "web-sys/WakeLock", "web-sys/WakeLockType", "web-sys/WakeLockSentinel"]
touches = ["dep:glam"]
rapidhash = ["rapidhash/std"]
rng = ["dep:rand", "rapidhash/rng"]
icon_loader = ["dep:icon-loader", "dep:resvg"]
web_clipboard = ["web-sys/Clipboard", "web-sys/ClipboardEvent", "web-sys/DataTransfer"]
directories = ["dep:robius-directories"]
storage = ["directories", "web-sys/Storage"]


[dependencies]
winit = { git = "https://github.com/iced-rs/winit", rev = "11414b6aa45699f038114e61b4ddf5102b2d3b4b" }
log = "0.4"
anyhow = "1"
web-time = "1"

rel_path = { path = "rel_path" }

rapidhash = { version = "3", default-features = false, features = ["unsafe"], optional = true }
rand = { version = "0.9", default-features = false, optional = true }
glam = { version = ">=0.29", optional = true }


[target.'cfg(target_os = "linux")'.dependencies]
icon-loader = { version = "0.4", optional = true }
resvg = { version = "0.43", optional = true }


[target.'cfg(not(target_family = "wasm"))'.dependencies]
pollster = "0.3"
simple_logger = "5"

robius-directories = { version = "5", optional = true }
nosleep = { version = "0.2", optional = true }


[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window"] }
js-sys = { version = "0.3" }
console_error_panic_hook = "0.1"
console_log = "1"