[package]
name = "rel_path"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version = "1.88"

[lib]
name = "rel_path"
proc-macro = true

[dependencies]
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro"] }
quote = "1"